<resources>
    <string name="app_name">Giuse QR</string>
    <string name="btn_label">THỰC HIỆN LƯU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">QUẢN LÝ ĐIỂM DANH</string>
    <string name="user_detail_title">THÔNG TIN CÁ NHÂN</string>
    <string name="not_signed_in">Chưa đăng nhập</string>
    <string name="google_sign_in">Đăng nhập</string>
    <string name="church_name">GX. THÁNH GIUSE</string>
    <string name="current_date">Thứ Bảy, 01-10-2022 10:42:12</string>
    <string name="time_not_allowed">Ngoài khung giờ quét</string>
    <string name="sync_action">ĐỒNG BỘ</string>
    <string name="sign_in_action">ĐĂNG NHẬP</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_account">Cá nhân</string>
    <string name="nav_scan">Quét mã</string>
    <string name="nav_sync">Đồng bộ</string>
    <string name="nav_exit">Thoát</string>
    <string name="search_hint">Nhập ID hoặc ngày quét</string>
    <string name="scanned_title">THÔNG TIN QUÉT</string>
    <string name="empty">Trống</string>
    <string name="prompt">Vui lòng quét mã</string>
    <string name="exist_notification">Mã này đã quét rồi!</string>
    <string name="camera_title">Camera</string>
    <string name="scanned_history_title">Lịch sử quét</string>
    <string name="channel_notification_title">ĐỒNG BỘ DỮ LIỆU</string>
    <string name="notification_title">Chưa đồng bộ dữ liệu?</string>
    <string name="notification_description">Hãy kết nối Wifi và đồng bộ ngay!</string>
</resources>