<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
            android:id="@+id/titleInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_detail_title"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_alignParentStart="true"/>

    <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="85dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="300dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="88dp"/>

    <ImageView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:layout_marginTop="450dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="88dp"/>

    <TextView
            android:id="@+id/displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_signed_in"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginTop="450dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="143dp"/>

    <ImageView
            android:id="@+id/email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_email_24"
            android:layout_marginTop="480dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="88dp"/>

    <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="@string/not_signed_in"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="480dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="143dp"
            android:gravity="center"/>

    <ImageButton
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/sign_in_btn"
            android:layout_alignParentBottom="true"
            android:text="@string/sign_in_action"/>
</RelativeLayout>