<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:autoFocusButtonColor="@android:color/white"
        app:autoFocusButtonVisible="true"
        app:flashButtonColor="@android:color/white"
        app:flashButtonVisible="true"
        app:maskColor="#6F1E1A1A"
    />

    <TextView
            android:id="@+id/txtBarcodeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"/>

    <TextView
            android:id="@+id/titleContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/scanned_title"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            app:layout_constraintBottom_toBottomOf="@+id/scanner_view"
            android:gravity="center"/>

    <TextView
            android:id="@+id/titleId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="ID:"
            android:layout_gravity="left | center"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="40dp"/>

    <TextView
            android:id="@+id/titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="Tên:"
            android:layout_gravity="left | center"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="40dp"/>

    <TextView
            android:id="@+id/txtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="@string/empty"
            android:textStyle="bold"
            android:layout_gravity="left | center"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="80dp"/>

    <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="@string/empty"
            android:textStyle="bold"
            android:layout_gravity="left | center"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="80dp"/>

    <TextView
            android:id="@+id/txtExtra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="left | center"
            android:layout_marginTop="210dp"
            android:layout_marginLeft="40dp"/>
</FrameLayout>

