<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
            android:id="@+id/currentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/current_date"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="589dp"/>
    <TextView
            android:id="@+id/churchName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/church_name"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="554dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="143dp"/>
    <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/app_title"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="66dp"/>
    <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="284dp"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="85dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="192dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="88dp"/>
    <!--    <Button-->
<!--            android:id="@+id/btnTueThu"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#0000FF"-->
<!--            android:layout_marginLeft="130dp"-->
<!--            android:layout_marginTop="200dp"-->
<!--            android:text="Thứ 3-Thứ 5"/>-->

<!--    <Button-->
<!--            android:id="@+id/btnSunday"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#0000FF"-->
<!--            android:layout_marginLeft="130dp"-->
<!--            android:layout_marginTop="280dp"-->
<!--            android:text="Học giáo lý"/>-->

<!--    <Button-->
<!--            android:id="@+id/btnEarly"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#0000FF"-->
<!--            android:layout_marginLeft="130dp"-->
<!--            android:layout_marginTop="360dp"-->
<!--            android:text="Đi lễ sớm"/>-->

<!--    <Button-->
<!--            android:id="@+id/btnOther"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#0000FF"-->
<!--            android:layout_marginLeft="130dp"-->
<!--            android:layout_marginTop="440dp"-->
<!--            android:text="KHÁC"/>-->


</RelativeLayout>